migration-result/ver/13.x/server-access/guides/jetbrains-sftp.mdx
---
title: JetBrains SFTP
description: How to use a JetBrains IDE to manipulate files on a remote host with Teleport
h1: SFTP with JetBrains IDE
version: '13.x'
---

JetBrain's IDEs, like PyCharm, GoLand, and IntelliJ, allow browsing, copying, and editing files on a remote server
using the SFTP protocol. You can integrate Teleport with your IDE so you can copy files to and from a remote
machine without using a third-party client.

This guide explains how to use Teleport and a JetBrains IDE to access files with SFTP.

## Prerequisites

<Tabs>
  <Tab title="Open Source">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/ver/13.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.2.0.

      ```code
      $ tctl version
      # Teleport v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```

      See [Installation](/ver/13.x/installation) for details.
  </Tab>

  <Tab title="Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0,
      which you can download by visiting your [Teleport account](https://teleport.sh).

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>

  <Tab title="Teleport Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0.
      To download these tools, visit the [Downloads](/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>
</Tabs>

- JetBrains IDE like PyCharm, IntelliJ, GoLand etc. See [Products](https://www.jetbrains.com/products/#type=ide) for a full list of JetBrains IDEs.
- One or more Teleport SSH Service instances. If you have not yet done this,
  read the [Server Access Getting Started Guide](/ver/13.x/server-access/getting-started) to
  learn how.

## Step 1/3. First-time setup

Configure your local SSH client to access Teleport Nodes, assigning the `--proxy` flag to the address of your Teleport Proxy Service (e.g., `mytenant.teleport.sh` for Teleport Cloud users).

```code
# log in to your proxy:
$ tsh login --proxy proxy.foo.example.com --user alice

# generate the OpenSSH config for the proxy:
$ tsh config --proxy proxy.foo.example.com
```

Append the resulting configuration snippet into your SSH config file located
in the path below:

<Tabs>
  <Tab title="Linux/MacOS">
    `$HOME/.ssh/config`
  </Tab>

  <Tab title="Windows">
    `%UserProfile%\.ssh\config`

    <Warning>
      If using PowerShell on Windows to write your SSH config, note that normal
      shell redirection may write the file with the incorrect encoding. To
      ensure it's written properly, try the following:

      ```code
      $ tsh.exe config | out-file .ssh\config -encoding utf8 -append
      ```
    </Warning>
  </Tab>
</Tabs>

You should be able to connect to the desired Node using the following command, replacing `user` with the username you would like to assume on the Node:

```code
$ ssh user@[node name].[cluster name]
```

<Accordion title="Teleport Cloud">
  The SSH config you generated earlier instructs your SSH client to run `tsh proxy ssh` to access a Node in your Teleport cluster.
  However, running an `ssh` command against the Teleport Proxy Service at `yourtenant.teleport.sh` will result in an error.
</Accordion>

<Note>
  Teleport's certificates expire fairly quickly, after which SSH
  attempts will fail with an error like the following:

  ```txt
  alice@proxy.foo.example.com: Permission denied (publickey).
  ERROR: exit status 255

  kex_exchange_identification: Connection closed by remote host
  ```

  When you see this error, re-run `tsh login` to refresh your local certificate.
</Note>

## Step 2/3. Configure your JetBrains IDE

After opening your IDE go to `Tools` -> `Deployment` -> `Browse Remote Host`.

![Deployment](../../../../../assets/deployment-main-a63981a723.png)

Then click the plus sign in the top-left corner to add a new server.

![Add server](../../../../../assets/add-server-82ca91b23e.png)

Enter a name for your new server.

![New Deployment](../../../../../assets/deployment-added-4c0b48874b.png)

Click the three dots next to `SSH configuration` as in the picture above.

![SSH Configuration](../../../../../assets/ssh-configurations-3e735e8866.png)

Create a new configuration by clicking the plus sign on the top left and providing:

- `Host` - name of the Teleport Node.
- `Port` - the Teleport Node's SSH port (3022 by default).
- `Username` - the system username.

As an `Authentication type` pick `OpenSSH config and authentication agent`.
Next, you can click `Test Connection`.

![Successfully Connected](../../../../../assets/successfully-connected-24e8ad5c7f.png)

## Step 3/3. Browse a remote host

After closing the SSH configuration window, you should see `Remote Host` menu in your IDE.

![Browse window](../../../../../assets/browse-window-62512e223d.png)

## Next steps

### Using OpenSSH clients

This guide makes use of `tsh config`; refer to the
[dedicated guide](/ver/13.x/server-access/guides/openssh) for additional information.

## Further reading

- [JetBrains - Create a remote server configuration](https://www.jetbrains.com/help/idea/creating-a-remote-server-configuration.html#overload)
